--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -1,6 +1,8 @@
 <%- include('../includes/head.ejs') %>
     <link rel="stylesheet" href="/css/product.css">
     <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 </head>
 
 <body>
@@ -14,6 +16,7 @@
             <div class="centered">
                 <p>This web application was built by Šimun Terzanović as a practice backend project using Node.js and MySQL.</p>
                 <p>This is not a real webshop and we do not have any real products to sell.</p>
+                <p><a href="https://github.com/Terza369/poklopci-webshop"><i class="fa fa-github" style="font-size:36px; color:black"></i></a></p>
             </div>
         </div>
         <div class="grid">
