--- a/views/shop/checkout.ejs
+++ b/views/shop/checkout.ejs
@@ -20,7 +20,7 @@
                 <script
                     src="https://checkout.stripe.com/checkout.js" class="stripe-button"
                     data-key="pk_test_51HAg0sHZA2oE0Dgm9PJM1B434S6JwdjhQMbMe1dhecsUMjNOFO1Qe3pBa1hkZpsYfEX9C1bqMhMuV3HuEWnGw3Qy00suPbXgin"
-                    data-amount="<%= Math.round(locals.totalSum * 100) %>"
+                    data-amount="<%= locals.totalSum * 100 %>"
                     data-name="Your Order"
                     data-description="Items you ordered"
                     data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
