--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -9,7 +9,7 @@
         <div class="image">
             <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
         </div>
-        <h2><%= product.price %></h2>
+        <h2>€<%= product.price %></h2>
         <p><%= product.description %></p>
         <% if(isLoggedIn) { %>
             <%- include('../includes/add-to-cart.ejs') %>
