kneza code review

--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -16,7 +16,13 @@
             <div class="centered">
                 <p>This web application was built by Šimun Terzanović as a practice backend project using Node.js and MySQL.</p>
                 <p>This is not a real webshop and we do not have any real products to sell.</p>
-                <p><a href="https://github.com/Terza369/poklopci-webshop"><i class="fa fa-github" style="font-size:36px; color:black"></i></a></p>
+                <a href="https://github.com/Terza369/poklopci-webshop" id="github-icon">
+                    <div class="stage">
+                        <div class="icon pulsing">
+                            <i class="fa fa-github"></i>
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
         <div class="grid">
@@ -44,6 +50,7 @@
                             <ul>
                                 <li>"bcryptjs": "^2.4.3",</li>
                                 <li>"body-parser": "^1.19.0",</li>
+                                <li>"compression": "^1.7.4",</li>
                                 <li>"connect-flash": "^0.1.1",</li>
                                 <li>"csurf": "^1.11.0",</li>
                                 <li>"ejs": "^3.1.2",</li>
@@ -57,9 +64,7 @@
                                 <li>"nodemailer-sendgrid-transport": "^0.2.0",</li>
                                 <li>"pdfkit": "^0.11.0",</li>
                                 <li>"stripe": "^8.80.0"</li>
-<!--                                 <li>"helmet": "^4.0.0",</li>
-                                <li>"compression": "^1.7.4",</li>
-                                <li>"morgan": "^1.10.0",</li> -->
+
                             </ul>
                         <li>}</li>
                     </ul>
