--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,6 +2,10 @@
     color: #00695c;
     font-size: 1.3rem;
 }
+
+#packagejson {
+    margin-top: 0rem;
+}
   
 #packagejson ul{
     list-style: none;
@@ -9,4 +13,78 @@
 
 #features {
     margin-top: 0.8rem;
+}
+
+#github-icon {
+    position: relative;
+    font-size: 50px;
+    display: block;
+    left: 49%;
+    width: 50px;
+    height: 50px;
+}
+
+.stage {
+    position: absolute;
+    transform: translate(-50%, -50%);
+}
+  
+.icon {
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.726);
+    color: white;
+    border-radius: 50%;
+    text-align: center;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+}
+  
+.icon:after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    content: '';
+    box-shadow: inset 0 0 0 3.5px rgba(0, 0, 0, 0.301);
+    transition: transform 0.2s, opacity 0.2s;
+}
+  
+.icon:hover:after {
+    transform: scale(1.2);
+    opacity: 0.8;
+    box-shadow: inset 0 0 0 3px #00695c;
+}
+  
+.pulsing:before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    content: '';
+    box-shadow: inset 0 0 0 3px rgba(0, 0, 0, 0.856);
+    transition: transform 0.2s, opacity 0.2s;
+    animation: pulsing 2.7s infinite;
+}
+  
+@keyframes pulsing {
+    0% {
+        transform: scale(1);
+        opacity: 1;
+    }
+    50% {
+        transform: scale(1.2);
+        opacity: 0;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 0;
+    }
 }
