--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -9,15 +9,15 @@
     <%- include('../includes/navigation.ejs') %>
 
     <main>
-        <div id="welcome">
-            <div class="centered index-welcome">
+        <div id="welcome" class="centered">
+            <div class="index-welcome">
                 <h1>Welcome to the shop</h1>
             </div>
-            <div class="centered">
-                <p>This web application was built by Šimun Terzanović as a practice backend project using Node.js and MySQL.</p>
+            <div>
+                <p>This web application was built by Šimun Terzanović as a practice backend project using Node.js, Express, MySQL and EJS.</p>
                 <p>This is not a real webshop and we do not have any real products to sell.</p>
                 <a href="https://github.com/Terza369/poklopci-webshop" id="github-icon">
-                    <div class="stage">
+                    <div class="icon-wrapper">
                         <div class="icon pulsing">
                             <i class="fa fa-github"></i>
                         </div>
