--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,6 +3,10 @@
     font-size: 1.3rem;
 }
 
+#welcome {
+    margin-right: 2%;
+}
+
 #packagejson {
     margin-top: 0rem;
 }
@@ -19,12 +23,12 @@
     position: relative;
     font-size: 50px;
     display: block;
-    left: 49%;
+    left: 48.5%;
     width: 50px;
     height: 50px;
 }
 
-.stage {
+.icon-wrapper {
     position: absolute;
     transform: translate(-50%, -50%);
 }
@@ -51,7 +55,7 @@
     height: 100%;
     border-radius: 50%;
     content: '';
-    box-shadow: inset 0 0 0 3.5px rgba(0, 0, 0, 0.301);
+    box-shadow: inset 0 0 0 3.5px rgba(0, 0, 0, 0);
     transition: transform 0.2s, opacity 0.2s;
 }
   
