index delete package.json

--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -16,7 +16,7 @@
             <div>
                 <p>This web application was built by Šimun Terzanović as a practice backend project using Node.js, Express, MySQL and EJS.</p>
                 <p>This is not a real webshop and we do not have any real products to sell.</p>
-                <a href="https://github.com/Terza369/poklopci-webshop" id="github-icon">
+                <a href="https://github.com/Terza369/poklopci-webshop" id="github-icon" target="blank">
                     <div class="icon-wrapper">
                         <div class="icon pulsing">
                             <i class="fa fa-github"></i>
@@ -41,34 +41,6 @@
                     <li>PDF invoice generation</li>
                     <li>Payment</li>
                 </ul>
-            </div>
-            <div id="packagejson">
-                <h3>package.json:</h3>
-                <div id="dependencies">
-                    <ul>
-                        <li>"dependencies": {</li>
-                            <ul>
-                                <li>"bcryptjs": "^2.4.3",</li>
-                                <li>"body-parser": "^1.19.0",</li>
-                                <li>"compression": "^1.7.4",</li>
-                                <li>"connect-flash": "^0.1.1",</li>
-                                <li>"csurf": "^1.11.0",</li>
-                                <li>"ejs": "^3.1.2",</li>
-                                <li>"express": "^4.17.1",</li>
-                                <li>"express-mysql-session": "^2.1.4",</li>
-                                <li>"express-session": "^1.17.1",</li>
-                                <li>"express-validator": "^6.6.0",</li>
-                                <li>"multer": "^1.4.2",</li>
-                                <li>"mysql2": "^2.1.0",</li>
-                                <li>"nodemailer": "^6.4.10",</li>
-                                <li>"nodemailer-sendgrid-transport": "^0.2.0",</li>
-                                <li>"pdfkit": "^0.11.0",</li>
-                                <li>"stripe": "^8.80.0"</li>
-
-                            </ul>
-                        <li>}</li>
-                    </ul>
-                </div>
             </div>
         </div>
         
