--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,6 +1,5 @@
-.index-welcome {
+.index-welcome h1{
     color: #00695c;
-    font-size: 1.3rem;
 }
 
 #welcome {
@@ -9,21 +8,23 @@
 
 #features {
     margin-top: 1.8rem;
-    margin-left: 1.5rem;
+    margin-left: 3.5rem;
+}
+
+.icon-wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
 
 #github-icon {
     position: relative;
     font-size: 50px;
     display: block;
-    left: 48.5%;
+    left: 50%;
     width: 50px;
     height: 50px;
     margin-top: 3rem;
-}
-
-.icon-wrapper {
-    position: absolute;
     transform: translate(-50%, -50%);
 }
   
