--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -1,11 +1,3 @@
-.main-header {
-
-}
-  
-.main-header__nav {
-
-}
-
 .main-header__item-list {
     list-style-type: none;
     margin: 0;
@@ -30,24 +22,37 @@
     color: white;
     text-align: center;
     padding: 15px 26px;
+    transition: background-color 0.15s;
+    transition-timing-function: linear;
 }
 
 .main-header__item a:hover,
 .main-header__item a:active,
-.main-header__item a.active {
+.main-header__item-auth a:hover,
+.main-header__item-auth a:active,
+.main-header__item a.active,
+.main-header__item-auth a.active {
     background-color:rgb(63, 63, 63);
 }
 
-.main-header__item-auth button {
+.main-header__item-logout {
+    float: right;
+}
+
+.main-header__item-logout button {
     text-decoration: none;
     display: block;
     color: white;
     background-color: #00695c;
     text-align: center;
     padding: 14px 26px;
+    border-radius: 0;
+    outline: none;
 }
 
-.main-header__item-auth button:hover,
-.main-header__item-auth button:active {
+.main-header__item-logout button:hover,
+.main-header__item-logout button:active {
     background-color:rgb(63, 63, 63);
+    border-radius: 0;
+    border-style: outset;
 }
