--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -26,6 +26,7 @@
                     type="file" 
                     name="image" 
                     id="image"
+                    class="filepicker-input"
                     value="<%= locals.product.imageUrl %>">
             </div>
             <div class="form-control">
@@ -49,7 +50,9 @@
             <input type="hidden" value="<%= product.id %>" name="id">
             <input type="hidden" value="<%= product.userId %>" name="userId">
             <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
-            <button class="btn" type="submit"><% if(editing) { %>Update product<% } else { %>Add Product<% } %></button>
+            <div class="button-wrapper">
+                <button class="btn" type="submit"><% if(editing) { %>Update product<% } else { %>Add Product<% } %></button>
+            </div>
         </form>
     </main>
 <%- include('../includes/end.ejs') %>
