--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -29,7 +29,9 @@
                     id="password">
             </div>
             <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
-            <button class="btn" type="submit">Login</button>
+            <div class="button-wrapper">
+                <button class="btn" type="submit">Login</button>
+            </div>
         </form>
         <div class="centered">
             <a class="btn" href="/reset">Reset Password</a>
