--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -7,3 +7,4 @@
     <title><%= pageTitle %></title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/nav.css">
+    <link rel="stylesheet" href="/css/nav-mobile.css">
