--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -43,7 +43,7 @@
     <nav class="main-header__nav-mobile">
         <ul class="main-header__item-list-mobile">
             <li class="dropdown main-header__item-mobile">
-              <a href="#" class="dropbtn">Menu</a>
+              <a href="/" class="dropbtn">Menu</a>
               <div class="dropdown-content">
                 <a class="<%= path === '/' ? 'active' : '' %>" href="/">Home</a>
                 <a class="<%= path === '/products' ? 'active' : '' %>" href="/products/?page=0">Products</a>
