--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -7,7 +7,8 @@
     margin: 0;
 }
 
-.main-header__item-list-mobile .main-header__item-logout {
+.main-header__item-list-mobile .main-header__item-logout,
+.main-header__item-list-mobile .main-header__item-auth {
     position: absolute;
 }
 
